@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FTN NetMail/EchoMail
  *
- * $Id: histdb.c,v 1.4 2004/02/26 18:59:32 rusfidogate Exp $
+ * $Id: histdb.c,v 1.5 2004/03/04 19:42:20 rusfidogate Exp $
  *
  * MSGID history functions and dupe checking
  *
@@ -188,8 +188,8 @@ short int hi_write_dbc(char *rfc_msgid, char *fido_msgid, short int dont_flush)
     }
 
     /* Write MSGID line to history text file */
-    if(strlen(fido_msgid) > 8)
-    fido_msgid = strrchr(fido_msgid, ' ') + 1;
+    if(strchr(fido_msgid, ' '))
+	fido_msgid = strrchr(fido_msgid, ' ') + 1;
     debug(7, "dbc history: offset=%ld: %s %s %ld", offset, fido_msgid,
 		rfc_msgid, ti.time);
     ret = fprintf(hi_file, "%s\t%s\t%ld\n", fido_msgid, rfc_msgid, ti.time);
